--- a/eventify-api/.env.example
+++ b/eventify-api/.env.example
@@ -1,12 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=Eventify
 APP_ENV=local
-APP_KEY=
+APP_KEY=  # <-- À générer localement avec `php artisan key:generate`
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=fr
+APP_FALLBACK_LOCALE=fr
+APP_FAKER_LOCALE=fr_FR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=eventify
+DB_USERNAME=root
+DB_PASSWORD=  # <-- Mettre son propre mot de passe ici
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
